--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cuestionario de Práctica para Licencia de Manejo de Chile</title>
+
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     
     <!-- Agregamos el enlace a la fuente de Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
