--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cuestionario de Práctica para Licencia de Manejo de Chile</title>
-
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <title>Cuestionario de Práctica para Licencia de Manejo de Chile</title>
     
     <!-- Agregamos el enlace a la fuente de Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +23,7 @@
       "description": "Prepara tu examen de licencia de manejo en Chile con nuestro cuestionario de práctica. Responde preguntas sobre normas de tráfico y seguridad vial.",
       "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "https://main--test-de-manejo-chile.netlify.app/"
+        "@id": "https://test-de-manejo-chile.netlify.app"
       },
       "author": {
         "@type": "Person",
@@ -33,16 +32,16 @@
       "datePublished": "2023-10-04",
       "image": {
         "@type": "ImageObject",
-        "url": "https://main--test-de-manejo-chile.netlify.app/imagen/fondo/4.png",
+        "url": "https://test-de-manejo-chile.netlify.app/imagen/fondo/4.png",
         "height": 800,
         "width": 1200
       },
       "publisher": {
         "@type": "Organization",
-        "name": "https://main--test-de-manejo-chile.netlify.app/",
+        "name": "https://test-de-manejo-chile.netlify.app",
         "logo": {
           "@type": "ImageObject",
-          "url": "https://main--test-de-manejo-chile.netlify.app/imagen/fondo/4.png",
+          "url": "https://test-de-manejo-chile.netlify.app/imagen/fondo/4.png",
           "width": 200,
           "height": 60
         }
