--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
 
     <link rel="stylesheet" href="styles.css">
 </head>
+    <div id="intro-header">
+    <h1>¡Prepárate para tu Examen de Manejo en Chile!</h1>
+    <p>Con nuestro Cuestionario de Práctica para la Licencia de Manejo de Chile, estarás bien preparado para superar tu examen teórico de conducción.</p>
+    <a href="#" id="start-quiz-button">Comenzar el Cuestionario</a>
+</div>
 <body class="background-1">
     <div class="dark-mode-overlay"></div>
     
@@ -68,7 +73,7 @@
     </div>
 
     <div class="container">
-        <h1>Cuestionario de Práctica para Licencia de Manejo de Chile</h1>
+        <h2>Cuestionario de Práctica para Licencia de Manejo de Chile</h2>
         <br>
         <form id="quizForm">
         </form>
