--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 
     <link rel="stylesheet" href="styles.css">
 </head>
-    <div id="intro-header">
+<div id="intro-header">
+    <img src="https://github.com/ka0zstyle/prueba-de-manejo-chile.github.io/blob/main/imagen/fondo/4.png?raw=true" alt="Imagen de fondo" id="background-image">
     <h1>¡Prepárate para tu Examen de Manejo en Chile!</h1>
     <p>Con nuestro Cuestionario de Práctica para la Licencia de Manejo de Chile, estarás bien preparado para superar tu examen teórico de conducción.</p>
     <a href="#" id="start-quiz-button">Comenzar el Cuestionario</a>
