--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>Cuestionario de Práctica para Licencia de Manejo de Chile</title>
+    <head>
+    <!-- Otras etiquetas meta y enlaces pueden estar aquí -->
+    <meta name="google-site-verification" content="lx0k8S4boTl3iw09HEbe2_8rl9a4I9V1mxBo8kHUHGk">
+</head>
     
     <!-- Agregamos el enlace a la fuente de Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
